--- a/src/UI/Histories.xaml
+++ b/src/UI/Histories.xaml
@@ -204,22 +204,22 @@
                     Checked="ChangeOrientation" Unchecked="ChangeOrientation"/>
                 
                 <!-- Tips to Histories Panel -->
-                <Path
-                    Width="20" Height="20"
-                    Margin="8,0"
-                   
-                    Data="{StaticResource Icon.Info}"
-                    Fill="{StaticResource Brush.FG1}">
-                    <Path.ToolTip>
-                        <StackPanel Orientation="Vertical" TextElement.FontFamily="Consolas">
+                <Button Margin="4,0" ToolTip="{StaticResource Text.Histories.Guide}" Background="Transparent" Click="OpenGuide">
+                    <Path Data="{StaticResource Icon.Info}" Fill="{StaticResource Brush.FG2}"/>
+                </Button>
+
+                <!-- Usage tooltip -->
+                <Popup x:Name="popupGuide" IsOpen="False" StaysOpen="False" Placement="Bottom">
+                    <Border Background="{StaticResource Brush.Popup}" BorderThickness="1" BorderBrush="{StaticResource Brush.Border2}">
+                        <StackPanel Orientation="Vertical" TextElement.FontFamily="Consolas" Margin="8">
                             <Label Content="{StaticResource Text.Histories.Guide}" FontWeight="Bold" FontSize="14" Margin="0,0,0,8"/>
                             <Label Content="{StaticResource Text.Histories.Guide_1}"/>
                             <Label Content="{StaticResource Text.Histories.Guide_2}"/>
                             <Label Content="{StaticResource Text.Histories.Guide_3}"/>
                             <Label Content="{StaticResource Text.Histories.Guide_4}"/>
                         </StackPanel>
-                    </Path.ToolTip>
-                </Path>
+                    </Border>
+                </Popup>
             </StackPanel>
         </Grid>
     </Grid>
