--- a/src/UI/About.xaml
+++ b/src/UI/About.xaml
@@ -14,7 +14,7 @@
     </WindowChrome.WindowChrome>
 
     <!-- Window Layout -->
-    <Border BorderBrush="{StaticResource Brush.Border0}" BorderThickness="1">
+    <Border Background="{StaticResource Brush.Border0}" BorderBrush="{StaticResource Brush.Border0}" BorderThickness="1">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="32"/>
