--- a/src/UI/SettingDialog.xaml
+++ b/src/UI/SettingDialog.xaml
@@ -18,7 +18,7 @@
     </WindowChrome.WindowChrome>
 
     <!-- Window Layout -->
-    <Border BorderBrush="{StaticResource Brush.Border0}" BorderThickness="1">
+    <Border Background="{StaticResource Brush.Border0}" BorderBrush="{StaticResource Brush.Border0}" BorderThickness="1">
         <Grid Background="{StaticResource Brush.Window}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="32"/>
