--- a/src/UI/Histories.xaml
+++ b/src/UI/Histories.xaml
@@ -171,7 +171,7 @@
         </Grid>
 
         <!-- Split -->
-        <GridSplitter x:Name="splitter" Background="{StaticResource Brush.Border0}"/>
+        <GridSplitter x:Name="splitter" Background="{StaticResource Brush.CommitViewer}"/>
 
         <!-- Detail for selected commit -->
         <Grid x:Name="commitDetailPanel" Background="{StaticResource Brush.CommitViewer}">
