--- a/src/UI/UpdateAvailable.xaml
+++ b/src/UI/UpdateAvailable.xaml
@@ -31,7 +31,7 @@
                 </Grid.ColumnDefinitions>
 
                 <!-- LOGO -->
-                <Path Width="20" Height="20" Margin="6,-1,2,0" Data="{StaticResource Icon.Fetch}" Fill="{StaticResource Brush.FG1}"/>
+                <Path Margin="6,0,0,0" Data="{StaticResource Icon.Fetch}"/>
 
                 <!-- Title -->
                 <Label Grid.Column="1" Content="{StaticResource Text.UpdateAvailable}" FontWeight="Light"/>
