--- a/src/UI/InteractiveRebase.xaml
+++ b/src/UI/InteractiveRebase.xaml
@@ -52,10 +52,8 @@
                 <!-- Logo & TITLE -->
                 <StackPanel Grid.Column="0" Orientation="Horizontal">
                     <Path
-                        Width="20" Height="20" Margin="6,-1,2,0"
-                        
-                        Data="{StaticResource Icon.Git}"
-                        Fill="{StaticResource Brush.Logo}"
+                        Margin="6,0,0,0"
+                        Data="{StaticResource Icon.Branch}"
                         WindowChrome.IsHitTestVisibleInChrome="True"
                         MouseLeftButtonDown="LogoMouseButtonDown"/>
                     <Label Content="{StaticResource Text.InteractiveRebase}" FontWeight="Light"/>
